# sitewinder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
examples/: full_site.rs  groups.rs  hello_world.rs  tags.rs
examples/full_site/: about.sgpage  denmark.sgpage  footer.sginc  group_nav.sginc  header.sginc  hongkong.sgpage  india.sgpage  italy.sgpage  parsi.sgpage  style.css
examples/full_site/tags/: tag.sgtag
examples/groups/: footer.sginc  group_nav.sginc  post_1.sgpage  post_2.sgpage  post_3.sgpage
examples/hello_world/: hello_world.sgpage
examples/tags/: footer.sginc  header.sginc  post_1.sgpage  post_2.sgpage  post_3.sgpage
examples/tags/tags/: tag.sgtag
src/: main.rs
src/sitegen/: metadata.rs  mod.rs  page.rs  regexes.rs
tests/: examples.rs
tests/fixtures/examples/full_site/: about.html  denmark.html  hongkong.html  india.html  italy.html  parsi.html
tests/fixtures/examples/full_site/tags/: asia.html  cantonese.html  coffee.html  culture.html  curries.html  denmark.html  dim sum.html  fusion.html  hong kong.html  india.html  italy.html  parsi.html  persia.html  smørrebrød.html  spices.html  street food.html
tests/fixtures/examples/groups/: post_1.html  post_2.html  post_3.html
tests/fixtures/examples/hello_world/: hello_world.html
tests/fixtures/examples/tags/: post_1.html  post_2.html  post_3.html
tests/fixtures/examples/tags/tags/: 2024.html  hiking.html  holidays.html  italy.html  posts.html  spain.html
